[gd_scene load_steps=24 format=2]

[ext_resource path="res://vegetation/tree1.png" type="Texture" id=1]
[ext_resource path="res://tree.gd" type="Script" id=2]
[ext_resource path="res://vegetation/leaf.png" type="Texture" id=3]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -1, -7.97687, 1.02769, -7.95719, 1.02769, -6.99256, 1.93325, -6.97287, 2.05137, -2.99625, 3.05537, -3.01593, 3.016, -1.95287, 0.988314, -2.01193, 1.02769, -0.00393391, -1.03937, -0.00393391, -1.01969, -2.01193, -3.02768, -1.97256, -2.96863, -2.99625, -2.004, -3.01593, -1.98431, -7.01225, -1, -6.97287 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.25
height = 6.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 0.700832
height = 3.55423

[sub_resource type="Curve" id=4]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -32.7273 ), -932.727, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -91.6364 ), 0.0, 0.0, 0, 0, Vector2( 1, 98.1818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
max_value = 100.0
_data = [ Vector2( 0, 0 ), 0.0, 3.59651, 0, 0, Vector2( 0.453947, 99.0909 ), 195.08, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.5 ), 0.0, 0.190596, 0, 0, Vector2( 1, 0.0181818 ), -1.03636, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0.00657894, 0.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.145455 ), -0.345455, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 2
emission_box_extents = Vector3( 2, 1, 1 )
flag_disable_z = true
spread = 90.0
flatness = 0.46
gravity = Vector3( 0, 20, 0 )
angular_velocity = 5.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 7 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_random = 1.0
radial_accel = 5.0
radial_accel_random = 1.0
radial_accel_curve = SubResource( 11 )
tangential_accel_random = 1.0
damping = 5.0
damping_curve = SubResource( 9 )
angle_random = 1.0
angle_curve = SubResource( 5 )
scale_random = 1.0
scale_curve = SubResource( 13 )
hue_variation = 0.1
hue_variation_random = 1.0

[sub_resource type="Animation" id=15]
resource_name = "chopped"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 90.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/mouse area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "chopped"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "fade"
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 62.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hitAnimationFinished"
} ]
}

[sub_resource type="Animation" id=18]
length = 3.5
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -2.0, -3.0, 3.0, -5.0, 4.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/mouse area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=19]
radius = 5.78149
height = 7.87559

[sub_resource type="CapsuleShape2D" id=20]
radius = 0.938667
height = 3.05456

[node name="tree" type="KinematicBody2D"]
position = Vector2( 4, 4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
visible = false
occluder = SubResource( 1 )

[node name="mouse area" type="Area2D" parent="Sprite"]
visible = false
position = Vector2( -0.499695, -0.0174497 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/mouse area"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -12.5839 )
scale = Vector2( 2, 2 )
emitting = false
amount = 4
lifetime = 6.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 14 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/chopped = SubResource( 15 )
anims/fade = SubResource( 16 )
anims/hit = SubResource( 17 )
anims/wind = SubResource( 18 )

[node name="Camera" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera"]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 19 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 20 )

[node name="YSort" type="YSort" parent="."]
[connection signal="area_entered" from="Sprite/mouse area" to="." method="_on_mouse_area_area_entered"]
[connection signal="area_entered" from="Camera" to="." method="_on_Camera_area_entered"]
[connection signal="area_exited" from="Camera" to="." method="_on_Camera_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
